lib/libremidi/tests/corpus/Invalid/No Header Chunk/lie_myself.mid
vti_encoding:SR|utf8-nl
vti_timelastmodified:TR|17 Apr 2001 08:06:34 -0000
vti_extenderversion:SR|4.0.2.3712
vti_backlinkinfo:VX|
